[package]
name = "solana-cookbook-boilerplates"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "get_token_accounts"
path = "bin/get_token_accounts.rs"

[[bin]]
name = "get_mint_token_accounts"
path = "bin/get_mint_token_accounts.rs"

[dependencies]
solana-account-decoder = "1.14.18"
solana-client = "1.14.18"
solana-sdk = "1.14.18"
spl-token = "3.5.0"