[package]
name = "solana-cookbook-boilerplates"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "get_token_accounts"
path = "bin/get_token_accounts.rs"

[[bin]]
name = "get_mint_token_accounts"
path = "bin/get_mint_token_accounts.rs"

[[bin]]
name = "deserialize_instruction_data"
path = "bin/deserialize_instruction_data.rs"

[dependencies]
solana-account-decoder = "1.16.0"
solana-client = "^1.16.0"
solana-sdk = "1.16.0"
spl-token = "3.5.0"
borsh = "0.11.0"
solana-program = "1.16.0"